2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/imagemap/DynamicDriveToolTipFragmentGenerator.java
    (generateToolTipFragment): Escape text,
    * source/org/jfree/chart/imagemap/OverLIBToolTipFragmentGenerator.java
    (generateToolTipFragment): Likewise,
    * source/org/jfree/chart/imagemap/StandardToolTipFragmentGenerator.java
    (generateToolTipFragment): Likewise,
    * source/org/jfree/chart/imagemap/StandardURLTagFragmentGenerator.java
    (generateURLFragment): Likewise.

2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/AbstractRenderer.java
	(hashCode): Compute using more fields.

2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/JFreeChart.java
	(createBufferedImage(int, int, ChartRenderingInfo)): Change image type,
	(createBufferedImage(int, int, double, double, ChartRenderingInfo)): 
	Likewise. 

2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

	Bugs 1363043 and 1840139:
	* source/org/jfree/chart/entity/ChartEntity.java
	(getImageMapAreaTag): Escape toolTipText and urlText,
	* source/org/jfree/chart/imagemap/ImageMapUtilities.java
	(getImageMap): Escape name,
	(htmlEscape): New method.

2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

	Bug 1460195:
	* source/org/jfree/chart/entity/ChartEntity.java
	(getImageMapAreaTag): Add 'nohref' attribute when there is no URL.

2007-12-03  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/xy/XYSeriesCollection.java
	(getSeries(Comparable)): New method,
	* tests/org/jfree/data/xy/junit/XYSeriesCollectionTests.java
	(testGetSeriesByKey): New test method.

2007-11-30  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/xy/XYDataItem.java
	(getXValue): New method,
	(getYValue): Likewise,
	(toString): Likewise.

2007-11-30  David Gilbert  <david.gilbert@object-refinery.com>
